--- a/projects/nutriboom/epsilon/styles.css
+++ b/projects/nutriboom/epsilon/styles.css
@@ -66,6 +66,7 @@ a {
   justify-content: space-between;
   align-items: center;
   padding: 1.75rem 3rem;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .content {
@@ -120,4 +121,16 @@ a {
 }
 .login {
   padding-right: 6.5rem;
+}
+.fancy-hover {
+  color: #fff;
+  background: linear-gradient(#000 0 0) 0% calc(-3px - 100%) / var(--d, 0%) 200%
+    no-repeat;
+  transition: 0.2s, background-size 0.2s 0.2s;
+}
+.fancy-hover:hover {
+  --d: 100%;
+  background-position: 50% 0%;
+  color: #fff;
+  transition: 0.2s, background-position 0.2s 0.2s, color 0.2s 0.2s;
 }
