--- a/projects/nutriboom/styles.css
+++ b/projects/nutriboom/styles.css
@@ -169,3 +169,18 @@ h1.product-release {
 .c2 .product-image-bg {
   background-color: #dee2e6;
 }
+
+.c3 .product {
+  background: #184e77;
+}
+
+.c3 .product .product-title {
+  color: #168aad;
+}
+.c3 .product-description {
+  margin: 2rem 0 0;
+}
+.c3 .images {
+  display: flex;
+  justify-content: space-between;
+}
